--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head><title>My Website</title>
-</head>
-<body>
-  <h1>Hello, World!</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Your Profile</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div class="profile-card">
+            <div class="banner">
+            </div>
+            <img src="kat.jpg" alt="Profile Image" class="profile-img">
+            <p>
+                Hi! My name is Srikanth, also known as <code>zak/zak1o7/zak_1o7</code> on the internet.<br><br> You can contact me here on <a href="https://discordapp.com/users/821192904735195138/" target="_blank"
+                style="color: #f7768e; text-decoration: none;">Discord</a>.
+                <p style="color: #9ece6a;">
+                    I love to code<br>
+                    And I love JAPAN.
+                </p>
+                <a href="https://discordapp.com/users/821192904735195138/" target="_blank" text-decoration: none;"><img src="https://api.statusbadges.me/badge/status/821192904735195138?style=for-the-badge" alt="status"></a> 
+            </p>
+            <a href="https://github.com/zak1o7" target="_blank" style="text-decoration: none;">
+                <div class="svg-container">
+                    <img src="github.png" alt="Github">
+                </div>
+            </a>
+    </body>
 </html>
